Scoreboards/wwwroot/css/site.css
/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
for details on configuring this project to bundle and minify static web assets. */
body {
    color: #909090;
    font-family: "Lato",sans-serif;
    padding-top: 48px;
    font-style: normal;
    font-weight: 400;
    background-color: #f3f3f3;
    line-height: 1.7;
    font-size: 16px;
}
.home-page, .user-page, .game-page > h3, label {
    color: #fff;
}
.body-content {
    padding: 0;
    margin: 0;
}

tbody > tr:hover {
    background-color: rgba(39, 39, 39, 0.8);
    cursor: pointer;
}

/* NAVBAR CUSTOM COLORING */
.navbar {
    background-color: #000 !important;
    border: none !important;
}

.navbar-header-custom {
    padding: 7px 0;
}

.navbar-inverse, .navbar-nav > li > a, button {
    font-family: inherit;
    font-style: normal;
    font-weight: 200;
    line-height: 1;
    text-transform: uppercase;
    color: hsl(0,0%,100%);
}

.navbar-nav-custom > li {
    border-top: 3px solid #000;
    border-bottom: 3px solid #000;
}

.navbar-nav-custom > li > a {
    padding-top: 22px;
    padding-bottom: 22px;
}

.navbar-nav-custom > li:hover, navbar-nav-custom > li:focus {
    color: #e4ac25;
    border-bottom: 3px solid #e4ac25;
}

.navbar-brand {
    padding-top: 0;
    padding-bottom: 0;
}

.login-partial-user-avatar > img {
    width: 1.2em;
    height: 1.2em;
    object-fit: cover;
    margin-bottom: -5px;
    margin-top: -8px;
}

.navbar-link-custom {
    text-decoration: none !important;
    padding-top: 9px;
    padding-bottom: 10px;
    font-size: 1em;
}

/* LOGO */
.instillery-logo-navbar {
    width: 7em;
    background-image: url("/images/The-Instillery-Logo-LoRes.png");
    height: 2.89em;
    background-size: cover;
    background-repeat: no-repeat;
    margin-top: -1px;
}

/* ADMIN PAGE */
.user-list-avatar{
    height: 2em;
    width: 2em;
    object-fit: cover;
    border-radius: 2px;
}

.admin-key {
    color: gold;
}

.admin-page-user-metadata{
    cursor: pointer;
}

.admin-page-actions{
    display: inline-flex;
}

.admin-page-actions-item {
    padding: 0.2em;
    width: 1.5em;
}

.admin-email-confirmed {
    color: green !important;
}

.admin-delete-account {
    margin-left: 1em;
}

.admin-delete-account > a {
    color: red !important;
}

fieldset.admin-delete-fieldset {
    border: solid 1px red !important;
    padding: 0 10px 10px 10px;
    border-bottom: none;
}

legend.admin-delete-user-legend {
    width: auto !important;
    border: none;
    font-size: 1em;
    color: red;
}


/* USER PROFILE PAGE*/
.profile-picture img {
    max-height: 300px;
    max-width: 300px;
    height: 100%;
    width: 100%;
    border: 5px solid black;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    border-radius: 5px;
}

.profile-picture-border  {
    max-height:305px;
    max-width:305px;
    border:5px solid white;
    border-radius: 5px;
}

.img {
    border-radius: 5px;
}

/*.profile-picture:after {
    top: -10px;
    left: -10px;
    right: -10px;
    bottom: -10px;
    background: white;
}*/

.row-margin-override {
    margin-left: 0px;
    margin-right: 0px;
}

.profile-margin {
    margin-top: 50px;
}

.profile-info {
    margin-top: 30px;
    margin-bottom: 30px;
}

.text-truncate {
    white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.label-area {
    width: 100%;
    white-space:initial;
}

.profile-information-icons {
    width: 25px;
}

.profile-icon-container {
    text-align:center;
}

.profile-statistics-text {
    display:inline-block;
    width: 100px;
}   

.profile-stats-container {
    display: inline-block;
    padding-bottom: 10px;
}

.profile-stats-name {
    border-right: 1px solid white;
}

/* Style the tab */
.tab {
    overflow: hidden;
    border-bottom: 2px solid #ccc;
    background-color: #f1f1f1;
}

/* Style the buttons that are used to open the tab content */
.tab {
    background-color: #000;
}

.tab button {
    background-color: #000;
    color: white;
    font-weight:bold;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    line-height: 17px;
    padding: 19px 16px;
    transition: 0.3s;
    width: 25%; 
}

/* Change background color of buttons on hover */
.tab button:hover {
    background-color: #ddd;
    color: #909090;
}

/* Create an active/current tablink class */
.tab button.active {
    background-color: #ccc;
}

/* Style the tab content */
.tabcontent {
    display: none;
    padding: 6px 12px;
    border-top: none;
    height: 342px;
    overflow-y: auto;
    margin-bottom: 20px;
}

/* STYLE FOR THE CARD FORMAT ON USER AND GAME SEARCH*/
.user-cards {
    margin: 20px;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    grid-auto-rows: minmax(100px, auto);
    grid-gap: 1rem;
}

.card {
    border: 2px solid #e7e7e7;
    border-radius: 4px;
    padding: .5rem;
    -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    align-items: center;
    color: white;
    cursor: pointer;
    font-weight: bold;
    background-color: rgba(16,9,1,0.5);
}

.game-cards-container {
    margin: 20px;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(100px, 300px));
    grid-auto-rows: minmax(100px, auto);
    grid-gap: 1rem;
    max-width: 80%;
    align-self: center;
    align-items: center;
    align-content: center;
    justify-content: center;
}

.game-card {
    border: 2px solid #e7e7e7;
    border-radius: 4px;
    padding: .5rem;
    -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
    display: flex;
    -ms-flex-direction: column;
    flex-direction: column;
    align-items: center;
    color: #fff;
    cursor: pointer;
    font-weight: bold;
}
.user-card-picture img {
    fill: #c7c4c4;
    height: 135px;
    padding: 1.5rem;
}

/* SEARCH SIZES*/
.usr-search-bar {
    max-width: 400px;
    width: 70%;
    margin-bottom:20px;
    color: black;
    font-weight:bold;
}

.usr-search-btn {
    width: 50px;
    color:black;
    font-weight:bold;
}

/* COMMON FOR ALL PAGES */
.page-content {
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 600px;
    padding: 15px;
}

/*HOME PAGE*/
.home-page, .game-page, .user-page, .company-info, .manage-account-page, .add-game-page {
    color: #fff;
    background-image: url(/images/banner-home.jpg);
    padding: 15px 30px;
}

.display-next-to-each-other {
    margin-top: 5px;
}

.float-left1 > h3 {
    margin: 0;
    padding: 0;
}
.match-history-table-td {
    text-align: center;
}
.match-history-table-outer-div {
    justify-content: center;
    text-align: center;
    align-self: center;
}
.match-history-table-middle-div {
    display: flex;
    justify-content: center;
    align-self: stretch;
}
.match-history-table-inner-edge-div {
    flex-direction:column;
    justify-content: center;
    text-align: center;
    width: 40%;
    overflow: hidden;
    text-overflow: ellipsis;
}
.match-history-table-inner-center-div {
    justify-content: center;
    text-align: center;
    align-self: center;
    width: 20%;
}

.match-history-game-name {
    margin-left: 2em;
    margin-right: 2em;
}

.edit-delete-game {
    margin-left: .4em;
    margin-right: -2.5em;
}
.leaderboard-table{
    justify-content:space-between;
    align-items:stretch;
    align-content:stretch;
    align-self:stretch;
}

.user-trophy {
    margin-left: -1px;
    background-color: inherit;
    font-size: 1em;
    padding: 0;
}

.gold{
    color: gold;
}

.silver {
    color: silver;
}

.bronz {
    color: #cd7f32;
}

.user-trophy > i {
    margin-bottom: 5px;

}

.leader-table-rank-number {
    text-align: center;
    margin-bottom: 0 !important;
}

.home-leader-table-cell {
    white-space: nowrap;
    height: 40px;
    text-align: center;
    display: table-cell;
    vertical-align: middle;
}

@media only screen and (max-width: 920px) {
    .toggle-table-column {
        display: none;
    }
}

@media only screen and (max-width: 840px) {
    .toggle-table-column2 {
        display: none;
    }
}
/*LOGIN PAGE*/
.login-page {
    background-image: url(/images/contact-banner.jpg);
}

/*REGISTER PAGE*/
.register-page {
    background-image: url(/images/contact-banner.jpg);
}

/* NEW USER GAME PAGE*/
.new-user-game {
    background-image: url(/images/shutterstock_217325476.jpg);
    padding: 15px 30px;
}

.user-game-player {
    padding-left: 5%;
    padding-right: 5%;
}

#GamePlayedName {
    width: 50%;
}

#GameScore {
    width: 50%;
}

.btn-submitUserGame {
    padding-left: 5%;
}

#submitUserGameBtn {
    color: #a6a6a6;
    margin-left: 1.1em;
    margin-top: 1em;
}

#submitUserGameBtn:hover {
    color: #262626;
}

fieldset.user-game-fieldset {
    border: solid 1px #DDD !important;
    padding: 0 10px 10px 10px;
    border-bottom: none;
}

legend.user-game-legend {
    width: auto !important;
    border: none;
    font-size: 1em;
    color: white;
}

/* EDIT USER GAME PAGE */
.btn-cancel {
    background-color: #f0f0f0;
    text-transform: capitalize;
}

/* ABOUT PAGE */
.company-info {
    background-image: url(/images/shutterstock_217325476.jpg);
    padding: 15px 30px;
}


/* FOOTER */
.footer-partial {
    padding-top: 30px;
    background-color: #000;
    text-align: center;
}

.zero-row-margin {
    margin-right: 15px !important;
    margin-left: 15px !important;
}

.social-media-row {
    padding: 10px 0;
}

.zero-row-margin > p {
    font-size: 0.75em;
    margin: 0;
    padding-bottom: 20px;
}

.social-media-footer-bar {
    display: inline-flex;
    margin-left: 0 !important;
}

.social-media-footer-bar > li {
    padding: 0 1em 0 1em;
    margin: 0 10px 0 10px;
    width: 3em;
    height: 3em;
    border-radius: 50%;
    background-color: #fff;
}

.social-media-footer-bar > li:hover {
    cursor: pointer;
}

.social-media-element > i {
    font-size: 1.3em;
    padding-top: .6em;
}

.social-media-element {
    text-align: center;
}

.float-left1, .float-right1 {
    padding: 0;
}
.float-right1 {
    float: right;
    overflow: auto;
}

.row .display-next-to-each-other {
    margin-top: 5px;
}

.float-left1 > h3 {
    margin: 0;
    padding: 0;
}

/* game/user page card css */
.card-picture {
    height: 135px;
    background-color: #5d5e5e;
}
.game-card-detail {
    color: white;
}

/* GAME DETAIL PAGE*/
.game-detail-table-div {
    height: 400px;
    overflow-y: auto;
    padding-left: 15px;
}
.game-profile-table-div {
    padding-top: 0;
    padding-bottom: 0;
    width:auto;
    height: 300px;
    overflow-y: auto;
}
.game-detail-thead > tr, th {
    position: sticky;
    top: 0;
    padding-top: 20px !important;
}


/* MANAGE USER ACCOUNT PAGE */
.manage-account-body {
    margin: 10px;
}

.nav-tab {
    background-color: #000;
    font-weight: bold;
    border-radius: 3px;
}

.nav-pills > li.active > a, .nav-pills > li.active > a:focus {
    background-color: #ddd;
}

.nav-pills > li.active > a:hover {
    background-color: #ddd;
    color: #909090;
}

.nav-tab > a {
    color: #909090;
    transition: 0.3s;
}

.nav-tab > a:hover {
    background-color: #ddd;
    color: #909090;
}

/* DELETE USER PROFILE PAGE */
.button-inline-group {
    display: inline-flex;
}

.button-inline-group-button {
    margin: 15px;
}

/* Add Game Page */

